@@ -35,7 +35,6 @@
 
 NX_ASRCS   =
 
-NX_CSRCS   = nx_eventhandler.c nx_eventnotify.c
 NX_CSRCS  += nxmu_kbdin.c nxmu_mouse.c nxmu_openwindow.c nxmu_redrawreq.c
 NX_CSRCS  += nxmu_releasebkgd.c nxmu_requestbkgd.c nxmu_reportposition.c
 NX_CSRCS  += nxmu_sendclient.c nxmu_sendclientwindow.c nxmu_server.c
