@@ -1,7 +1,7 @@
 /****************************************************************************
- * graphics/nxmu/nx_eventnotify.c
+ * libnx/nxmu/nx_eventnotify.c
  *
- *   Copyright (C) 2008-2009, 2011 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2008-2009, 2011, 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -46,7 +46,7 @@
 #include <debug.h>
 
 #include <nuttx/nx/nx.h>
-#include "nxfe.h"
+#include <nuttx/nx/nxmu.h>
 
 #ifndef CONFIG_DISABLE_SIGNALS
 
